--- a/reviewer/templates/reviewer/digital_literacy.html
+++ b/reviewer/templates/reviewer/digital_literacy.html
@@ -60,7 +60,7 @@
 </table>
  <form method="post" action="">
  {% if include_href %}
- <a target="_blank" href="{% url 'reviewer:reviewer_comment' %}?report={{report_name}}&today={{YYYYMM}}&district={{district}}">
+ <a target="_blank" href="{% url 'messages:messages_compose' %}?recipient={{recipient}} ">Comment</a>
  Comment</a> 
  {% endif %}
 </form>
