--- a/reviewer/templates/reviewer/csc.html
+++ b/reviewer/templates/reviewer/csc.html
@@ -67,8 +67,7 @@
         {% endfor %}
 </table>
  <form method="post" action="">
-<a href="{% url 'reviewer:reviewer_comment' %}?report={{report_name}}&today={{YYYYMM}}&district={{district}}">Comment</a>
-</form>
+<a target="_blank" href="{% url 'messages:messages_compose' %}?recipient={{recipient}} ">Comment</a></form>
 </body>
 </html>
 {% endblock %}
