--- a/reports/templates/reports/delete_report.html
+++ b/reports/templates/reports/delete_report.html
@@ -14,10 +14,13 @@
     	<td>Report Name: </td><td>{{form.report_name}}</td>
     </tr>
      <tr></tr><tr></tr>
+     </table>
+    <table>
     <tr>
-    	<td>Report Month: </td><td>{{form.YYYYMM}}</td>
+        <td align='right'>Year: </td><td>{{form.year}}</td> <td align='right'>Month: </td><td>{{form.month}}</td>
     </tr>
     </table>
-    <button type="submit">Submit</button>
+    <br><br>
+    <button type="submit" style="height:20px; width:300px">Submit</button>
 </form>
 {% endblock %}
