--- a/reports/templates/reports/edit.html
+++ b/reports/templates/reports/edit.html
@@ -8,10 +8,13 @@
     <tr>
     	<td align='right'>District: </td><td>{{a_form.district}}</td>
     </tr>
+  </table>
+  <table>
     <tr>
-    	<td>Report Month: </td><td>{{a_form.YYYYMM}}</td>
+    	<td>Year: </td><td>{{a_form.year}}</td> <td>Month: </td><td>{{a_form.month}}</td>
     </tr>
     </table>
+   <br>
  <input type="submit" name='genvalue' value="Generate Data" id="submitid" />
  <br><br><br><br>
  
