--- a/reviewer/templates/reviewer/g2c_service.html
+++ b/reviewer/templates/reviewer/g2c_service.html
@@ -34,9 +34,10 @@
 {% csrf_token %}
 {% endif %}
 	<h3> District: <strong>{{ district_full_name }}</strong> </h3>
-	<h3> Report Month: <strong>{{ YYYYMM }}</strong> </h3>
+	<h3> Report Month: <strong>{{ verbose_report_month }}</strong> </h3>
     <tr>
         <th scope="col">Service Name</th>
+                        <th scope="col">Sl.No</th>
                         <th scope="col">Department/Branch</th>
                         <th scope="col">Delivery Channel</th>
                         <th scope="col">Name of Online Application</th>
@@ -50,7 +51,8 @@
     </tr>
     {% for item in filtered_result %}
     <tr> 
-        <td >{{ item.service_nm }}</td>
+                          <td>{{forloop.counter}}</td>
+                         <td >{{ item.service_nm }}</td>
                         <td>{{ item.associated_line_department }}</td>
                         <td> {{ item.delivery_channel }}</td>
                         <td> {{ item.name_of_application }}</td>
