--- a/reviewer/templates/reviewer/g2c_service_pdf.html
+++ b/reviewer/templates/reviewer/g2c_service_pdf.html
@@ -51,11 +51,12 @@
          <div>
          <div class='details'>
            
-                <h3> District: <strong>{{ district }}</strong> </h3>
-                <h3> Report Month: <strong>{{ report_month }}</strong> </h3>
+                <h3> District: <strong>{{ district_full_name }}</strong> </h3>
+                <h3> Report Month: <strong>{{ verbose_report_month }}</strong> </h3>
 
               <table class="table">
               <thead>
+                        <th scope="col">Sl.No</th>
                          <th scope="col">Service Name</th>
                         <th scope="col">Department/Branch</th>
                         <th scope="col">Delivery Channel</th>
@@ -73,6 +74,7 @@
 
                 {% for item in filtered_result %}
                 <tr> 
+                        <td>{{forloop.counter}}</td>
                         <td >{{ item.service_nm }}</td>
                         <td>{{ item.associated_line_department }}</td>
                         <td> {{ item.delivery_channel }}</td>
