--- a/reviewer/templates/reviewer/hardware.html
+++ b/reviewer/templates/reviewer/hardware.html
@@ -33,8 +33,9 @@
 {% csrf_token %}
 {% endif %}
 	<h3> District: <strong>{{ district_full_name }}</strong> </h3>
-	<h3> Report Month: <strong>{{ YYYYMM }}</strong> </h3>
+	<h3> Report Month: <strong>{{ verbose_report_month }}</strong> </h3>
     <tr>
+        <th scope="col">Sl.No</th>
         <th scope="col">Name of Hardware</th>
         <th scope="col">Quantity/No</th>
         <th scope="col">Current Status</th>
@@ -44,6 +45,7 @@
     </tr>
     {% for item in filtered_result %}
     <tr> 
+        <td>{{forloop.counter}}</td>
         <td> {{ item.hardware_nm }}</td>
         <td> {{ item.quantity }}</td>
         <td> {{ item.status }}</td>
@@ -56,7 +58,7 @@
  <form method="post" action="">
  {% if include_href %}
  <a target="_blank" href="{% url 'messages:messages_compose' %}?recipient={{recipient}} ">Comment</a>
- Comment</a> 
+
  {% endif %}
 </form>
 </body>
