--- a/reviewer/templates/reviewer/swan.html
+++ b/reviewer/templates/reviewer/swan.html
@@ -33,9 +33,10 @@
 {% csrf_token %}
 {% endif %}
 	<h3> District: <strong>{{ district_full_name }}</strong> </h3>
-	<h3> Report Month: <strong>{{ YYYYMM }}</strong> </h3>
+	<h3> Report Month: <strong>{{ verbose_report_month }}</strong> </h3>
     <tr>
-                        <th scope="col">Name of POPs</th>
+                        <th scope="col">Sl.No</th>
+                         <th scope="col">Name of POPs</th>
                         <th scope="col">Distance from HQ</th>
                         <th scope="col">Name of offices Connected</th>
                         <th scope="col">Distance of Office from POP</th>
@@ -49,9 +50,9 @@
     </tr>
     {% for item in filtered_result %}
     <tr> 
-     <td >{{ item.pop_names }}</td>
+                         <td>{{forloop.counter}}</td>
+                         <td >{{ item.pop_names }}</td>
                         <td>{{ item.distance_from_hq }}</td>
-
                         <td> {{ item.offices_connected_with_pop }}</td>
                         <td> {{ item.distance_from_pop }}</td>
                         <td> {{ item.connectivity_types }}</td>
