--- a/reviewer/templates/reviewer/csc.html
+++ b/reviewer/templates/reviewer/csc.html
@@ -32,10 +32,10 @@
 {% if csrf %}
 {% csrf_token %}
 {% endif %}
-	<h3> District: <strong>{{ district }}</strong> </h3>
-	<h3> Report Month: <strong>{{ YYYYMM }}</strong> </h3>
+	<h3> District: <strong>{{ district_full_name }}</strong> </h3>
+	<h3> Report Month: <strong>{{ verbose_report_month }}</strong> </h3>
     <thead>
-        
+                         <th scope="col">Sl.No</th>
                         <th scope="col">OMT ID</th>
                         <th scope="col">Name of VLE/CSC </th>
                         <th scope="col">Name of Gaon Panchayat</th>
@@ -50,6 +50,7 @@
     </thead>
         {% for item in filtered_result %}
         <tr>
+            <td>{{forloop.counter}}</td>
             <td >{{ item.omt_id }}</td>
             <td>{{ item.vle_name }}</td>
 
