--- a/reviewer/templates/reviewer/digital_literacy.html
+++ b/reviewer/templates/reviewer/digital_literacy.html
@@ -33,8 +33,9 @@
 {% csrf_token %}
 {% endif %}
 	<h3> District: <strong>{{ district_full_name }}</strong> </h3>
-	<h3> Report Month: <strong>{{ YYYYMM }}</strong> </h3>
+	<h3> Report Month: <strong>{{ verbose_report_month }}</strong> </h3>
     <tr>
+                        <th scope="col">Sl.No</th>
                         <th scope="col">Name of LAC</th>
                         <th scope="col">Number of Training Centres</th>
                         <th scope="col">No. of Examination Centres near to GP</th>
@@ -46,6 +47,7 @@
     </tr>
     {% for item in filtered_result %}
     <tr> 
+                        <td>{{forloop.counter}}</td>
                         <td >{{ item.lac_name }}</td>
                         <td>{{ item.num_training_centres }}</td>
 
@@ -61,7 +63,6 @@
  <form method="post" action="">
  {% if include_href %}
  <a target="_blank" href="{% url 'messages:messages_compose' %}?recipient={{recipient}} ">Comment</a>
- Comment</a> 
  {% endif %}
 </form>
 </body>
