--- a/reviewer/templates/reviewer/digital_literacy_pdf.html
+++ b/reviewer/templates/reviewer/digital_literacy_pdf.html
@@ -51,11 +51,12 @@
          <div>
          <div class='details'>
            
-                <h3> District: <strong>{{ district }}</strong> </h3>
-                <h3> Report Month: <strong>{{ report_month }}</strong> </h3>
+                <h3> District: <strong>{{ district_full_name }}</strong> </h3>
+                <h3> Report Month: <strong>{{ verbose_report_month }}</strong> </h3>
 
               <table class="table">
               <thead>
+                        <th scope="col">Sl.No</th>
                         <th scope="col">Name of LAC</th>
                         <th scope="col">Number of Training Centres</th>
                         <th scope="col">No. of Examination Centres near to GP</th>
@@ -68,6 +69,7 @@
 
                 {% for item in filtered_result %}
                 <tr> 
+                        <td>{{forloop.counter}}</td>
                         <td >{{ item.lac_name }}</td>
                         <td>{{ item.num_training_centres }}</td>
 
