--- a/reviewer/templates/reviewer/edistrict_transaction_pdf.html
+++ b/reviewer/templates/reviewer/edistrict_transaction_pdf.html
@@ -51,8 +51,8 @@
          <div>
          <div class='details'>
            
-                <h3> District: <strong>{{ district }}</strong> </h3>
-                <h3> Report Month: <strong>{{ report_month }}</strong> </h3>
+                <h3> District: <strong>{{ district_full_name }}</strong> </h3>
+                <h3> Report Month: <strong>{{ verbose_report_month }}</strong> </h3>
 
               <table class="table">
               <thead>
