--- a/reviewer/templates/reviewer/nofn.html
+++ b/reviewer/templates/reviewer/nofn.html
@@ -33,8 +33,9 @@
 {% csrf_token %}
 {% endif %}
 	<h3> District: <strong>{{ district_full_name }}</strong> </h3>
-	<h3> Report Month: <strong>{{ YYYYMM }}</strong> </h3>
+	<h3> Report Month: <strong>{{ verbose_report_month }}</strong> </h3>
     <tr>
+                       <th scope="col"Sl.No</th>
                        <th scope="col">Name of GP</th>
                         <th scope="col">Block Name</th>
                         <th scope="col">Whether Fiber layed upto GP</th>
@@ -44,10 +45,10 @@
                         <th scope="col">Access to Network Facility extendible upto village?</th>
                         <th scope="col">Remarks</th>
     {% for item in filtered_result %}
-    <tr> 
+    <tr>
+                         <td>{{forloop.counter}}</td> 
                         <td >{{ item.gp_name }}</td>
                         <td>{{ item.block_name }}</td>
-
                         <td> {{ item.is_fibre_layered_upto_gp }}</td>
                         <td> {{ item.is_gpon_installed_at_block }}</td>
                         <td> {{ item.is_gpon_termination_done_at_GP }}</td>
@@ -60,7 +61,6 @@
  <form method="post" action="">
  {% if include_href %}
 <a target="_blank" href="{% url 'messages:messages_compose' %}?recipient={{recipient}} ">Comment</a>
- Comment</a> 
  {% endif %}
 </form>
 </body>
