--- a/reviewer/templates/reviewer/nofn_pdf.html
+++ b/reviewer/templates/reviewer/nofn_pdf.html
@@ -51,11 +51,12 @@
          <div>
          <div class='details'>
            
-                <h3> District: <strong>{{ district }}</strong> </h3>
-                <h3> Report Month: <strong>{{ report_month }}</strong> </h3>
+                <h3> District: <strong>{{ district_full_name }}</strong> </h3>
+                <h3> Report Month: <strong>{{ verbose_report_month }}</strong> </h3>
 
               <table class="table">
               <thead>
+                        <th scope="col">Sl.No</th>
                         <th scope="col">Name of GP</th>
                         <th scope="col">Block Name</th>
                         <th scope="col">Whether Fiber layed upto GP</th>
@@ -69,6 +70,7 @@
 
                 {% for item in filtered_result %}
                 <tr> 
+                          <td>{{forloop.counter}}</td>
                         <td >{{ item.gp_name }}</td>
                         <td>{{ item.block_name }}</td>
 
